<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>obstacle_distance</name>
  <version>0.0.0</version>
  <description>Create a distance transform from an OccupancyGrid</description>
  <maintainer email="noeperez@upo.es">Noé Pérez-Higueras</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>obstacle_distance_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>libopencv-dev</depend>
  <!--<depend>builtin_interfaces</depend>-->

 

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
