<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>obstacle_distance_manager</name>
  <version>1.0.1</version>
  <description>
    Create a distance transform from an OccupancyGrid
  </description>
  <maintainer email="noeperez@upo.es">Noé Pérez-Higueras</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  
  <exec_depend>obstacle_distance_msgs</exec_depend>
  <exec_depend>obstacle_distance</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
